--- a/clusters/taplab/cluster-config/values/tap-install-values.yaml
+++ b/clusters/taplab/cluster-config/values/tap-install-values.yaml
@@ -1,6 +1,7 @@
 tap_install:
   package_repository:
-    oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
+    oci_repository: harbor.tanzu.pro/tanzu-packages/tap-packages
   version:
-    package_repo_bundle_tag: 1.6.4
-    package_version: 1.6.4
+    package_repo_bundle_tag: 1.7.0-rc.15
+    package_version: 1.7.0-rc.15
+  
