--- a/clusters/taplab/cluster-config/values/tap-install-values.yaml
+++ b/clusters/taplab/cluster-config/values/tap-install-values.yaml
@@ -2,6 +2,6 @@ tap_install:
   package_repository:
     oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
   version:
-    package_repo_bundle_tag: 1.6.4
-    package_version: 1.6.4
+    package_repo_bundle_tag: 1.7.0-rc.16
+    package_version: 1.7.0-rc.16
   
